--- a/css/styles.css
+++ b/css/styles.css
@@ -30,20 +30,20 @@ a {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: #4d5ae5;
 }
 
 .header-logo-pic {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: #2e2f42;
 }
 
 .header-menu-link {
@@ -56,7 +56,11 @@ a {
 }
 .header-menu-link:hover,
 .header-menu-link:focus {
-  color: aqua;
+  color: #404bbf;
+}
+
+.page {
+  font-style: normal;
 }
 
 .page-navigation-link {
@@ -71,7 +75,7 @@ a {
 
 .page-navigation-link:hover,
 .page-navigation-link:focus {
-  color: palevioletred;
+  color: #404bbf;
 }
 
 .hero {
@@ -101,6 +105,11 @@ a {
   cursor: pointer;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
+}
+
+.hero-buy-btn:hover,
+.hero-buy-btn:focus {
+  background-color: #404bbf;
 }
 
 .worked {
@@ -152,10 +161,11 @@ a {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .team-text {
   font-family: "Roboto", sans-serif;
@@ -188,9 +198,10 @@ a {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .portfolio-item-text {
   font-family: "Roboto", sans-serif;
@@ -208,19 +219,19 @@ a {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #f4f4fd;
+  color: #4d5ae5;
 }
 .footer-logo-pic {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: #f4f4fd;
 }
 .footer-text {
   font-family: "Roboto", sans-serif;
