--- a/css/styles.css
+++ b/css/styles.css
@@ -149,10 +149,12 @@ a {
   color: #2e2f42;
   text-transform: capitalize;
 }
+
 .team-list {
-  background-color: #ffffff;
 }
+
 .team-item {
+  background-color: #ffffff;
 }
 .team-pic {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
@@ -163,7 +165,7 @@ a {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.11;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
@@ -185,10 +187,11 @@ a {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11111;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  text-transform: capitalize;
 }
 .portfolio-list {
 }
@@ -200,7 +203,7 @@ a {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.11;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
   text-transform: capitalize;
