--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ a {
   font-size: 18px;
   line-height: 1.17;
   color: #4d5ae5;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .header-logo-pic {
@@ -33,6 +35,7 @@ a {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .header-menu-link:hover,
@@ -48,6 +51,7 @@ a {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #434455;
 }
 
@@ -65,6 +69,9 @@ a {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+
   color: #fff;
 }
 
@@ -73,6 +80,7 @@ a {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.04em;
   color: #fff;
   background: #4d5ae5;
 }
@@ -94,12 +102,14 @@ a {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .worked-item-text {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #434455;
 }
 
@@ -111,6 +121,9 @@ a {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
   color: #2e2f42;
 }
 
@@ -128,12 +141,14 @@ a {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .team-text {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #434455;
 }
 
@@ -145,6 +160,9 @@ a {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
   color: #2e2f42;
 }
 
@@ -162,6 +180,7 @@ a {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 
@@ -169,6 +188,7 @@ a {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #434455;
 }
 
@@ -181,6 +201,8 @@ a {
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: #4d5ae5;
 }
 
@@ -196,5 +218,6 @@ a {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #f4f4fd;
 }
