--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@ a {
   font-size: 18px;
   line-height: 1.17;
   color: #2e2f42;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .header-menu-link {
@@ -83,6 +85,7 @@ a {
   letter-spacing: 0.04em;
   color: #fff;
   background: #4d5ae5;
+  cursor: pointer;
 }
 
 .hero-buy-btn:hover,
@@ -211,6 +214,8 @@ a {
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
   color: #f4f4fd;
 }
 
